<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.demo</groupId>
    <artifactId>spring</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>new-feature</module>
        <module>kafka-tools</module>
        <module>utils-demo</module>
        <module>spring-task</module>
        <module>demo-reactive</module>
        <module>dubbo-service</module>
        <module>service-api</module>
        <module>dubbo-client</module>
        <module>id-encoder</module>
        <module>wechat-adapter</module>
    </modules>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
    </parent>

    <properties>
        <java.version>25</java.version>
        <skipTests>true</skipTests>
        <maven.deploy.skip>true</maven.deploy.skip>
        <spring.version>4.0.2</spring.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>--enable-preview
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>


    <!--    <dependencyManagement>-->
    <!--        <dependencies>-->
    <!--            &lt;!&ndash; https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies &ndash;&gt;-->
    <!--            <dependency>-->
    <!--                <groupId>org.springframework.boot</groupId>-->
    <!--                <artifactId>spring-boot-dependencies</artifactId>-->
    <!--                <version>${spring.version}</version>-->
    <!--                <type>pom</type>-->
    <!--                <scope>import</scope>-->
    <!--            </dependency>-->
    <!--        </dependencies>-->
    <!--    </dependencyManagement>-->
    <!--    <pluginRepositories>-->
    <!--        <pluginRepository>-->
    <!--            <id>spring-snapshots</id>-->
    <!--            <url>https://repo.spring.io/snapshot</url>-->
    <!--        </pluginRepository>-->
    <!--        <pluginRepository>-->
    <!--            <id>spring-milestones</id>-->
    <!--            <url>https://repo.spring.io/milestone</url>-->
    <!--        </pluginRepository>-->
    <!--    </pluginRepositories>-->


    <!--    <repositories>-->

    <!--        <repository>-->
    <!--            <id>spring-snapshots</id>-->
    <!--            <url>https://repo.spring.io/snapshot</url>-->
    <!--        </repository>-->
    <!--        <repository>-->
    <!--            <id>spring-milestones</id>-->
    <!--            <url>https://repo.spring.io/milestone</url>-->
    <!--        </repository>-->
    <!--        <repository>-->
    <!--            <id>central</id>-->
    <!--            <url>https://repo1.maven.org/maven2/</url>-->
    <!--        </repository>-->
    <!--    </repositories>-->
</project>